tests/render_snapshots/snapshots/render_snapshots__connection_flow__connection_error_expanded.snap
---
source: tests/render_snapshots/connection_flow.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
│           ╭ Connection Error ────────────────────────────────────╮           │
│           │✗ Connection timed out                                │           │
│           │                                                      │           │
│           │Hint: Check network connectivity                      │           │
│           │                                                      │───────────┘
│           │▼ Details                                             │───────────┐
│           │psql: error: connection to server at "192.168.1.100", │           │
│           │port 5432 failed: timeout expired                     │           │
│           │                                                      │           │
│           │Actions:  e  Re-enter   s  Switch   d  Details   y  Co│           │
│           ╰ Esc/q to close ──────────────────────────────────────╯           │
│                  ││                                                          │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
e:Edit  s:Switch  d:Details  y:Copy  Esc/q:Close
