tests/render_snapshots/snapshots/render_snapshots__connection_flow__connection_setup_form.snap
---
source: tests/render_snapshots/connection_flow.rs
assertion_line: 20
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│ Press 'r' to load│┌ [2] Inspector ───────────────────────────────────────────┐
│                  ││(select a table)                                          │
│                  ││                                                          │
│        ╭ New Connection ────────────────────────────────────────────╮        │
│        │                                                            │        │
│        │  Type:       [ PostgreSQL               ▼ ]                │        │
│        │  Name:       [                            ]                │        │
│        │  Host:       [ localhost                  ]                │        │
│        │  Port:       [ 5432                       ]                │        │
│        │  Database:   [ mydb                       ]                │────────┘
│        │  User:       [ postgres                   ]                │────────┐
│        │  Password:   [                            ]                │        │
│        │  SSL Mode:   [ prefer                   ▼ ]                │        │
│        │                                                            │        │
│        │  Note: Connection info is stored locally in plain text     │        │
│        │                                                            │        │
│        ╰ Tab: Next │ Shift+Tab: Prev │ Ctrl+S: Connect │ Esc: Cancel╯        │
│                  ││                                                          │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
^S:Connect  Tab:Next  ⇧Tab:Prev  Esc:Cancel
